K8S/services/administrator-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: administratornpservice-srv
spec:
  type: NodePort
  selector:
    app: administratorservice
  ports:
    - name: administratorservice
      protocol: TCP
      port: 80
      targetPort: 80
