K8S/services/individual-cluster-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: individual-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: individualservice
  ports:
    - name: individualservice
      protocol: TCP
      port: 80
      targetPort: 80
    - name: individualgrpc
      protocol: TCP
      port: 666
      targetPort: 666
