K8S/services/individuallabs-cluster-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: individuallabs-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: individuallabsservice
  ports:
    - name: individuallabsservice
      protocol: TCP
      port: 80
      targetPort: 80
