K8S/services/location-cluster-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: location-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: locationservice
  ports:
    - name: locationservice
      protocol: TCP
      port: 80
      targetPort: 80
